tempfile/impl-trait-for-tuples/tests/ui/empty_for_tuples.stderr
error: unexpected end of input, expected one of: `type`, `const`, parentheses, `#`, `where`
  --> tests/ui/empty_for_tuples.rs:12:21
   |
12 |         for_tuples!()
   |                     ^
